card flicker fix for mtg dedicated card viewer

--- a/public/css/dedicated-card-view.css
+++ b/public/css/dedicated-card-view.css
@@ -10,6 +10,8 @@ body {
 
 .card-src {
     width: 100%;
+    transition: opacity 0.3s ease-in-out;
+    opacity: 0;
 }
 
 .main-card-display {
@@ -20,4 +22,25 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+
+.image-overlay {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.image-overlay img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: opacity 0.3s ease-in-out;
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
+.fade-image {
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
 }
